<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo" />
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:cardElevation="0dp"
        android:background="#000000"
        app:cardCornerRadius="35dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:hint="@string/input_email"
            android:textColor="@color/inputText"
            android:background="@color/inputColor"
            tools:ignore="RtlSymmetry" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:cardElevation="0dp"
        android:background="#000000"
        app:cardCornerRadius="35dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:hint="@string/input_password"
            android:textColor="@color/inputText"
            android:background="@color/inputColor"
            tools:ignore="RtlSymmetry" />
    </androidx.cardview.widget.CardView>
</LinearLayout>