<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="180dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="15dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo" />
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="35dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:hint="@string/input_email"
            android:textColor="@color/inputText"
            android:fontFamily="@font/notosanskr"
            android:textSize="13sp"
            android:inputType="textEmailAddress"
            android:background="@color/inputColor"
            tools:ignore="RtlSymmetry"
            android:autofillHints="emailAddress"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="35dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:hint="@string/input_password"
            android:textColor="@color/inputText"
            android:textSize="13sp"
            android:fontFamily="@font/notosanskr"
            android:inputType="textPassword"
            android:background="@color/inputColor"
            tools:ignore="RtlSymmetry"
            android:autofillHints="password" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="35dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:hint="@string/input_name"
            android:textColor="@color/inputText"
            android:textSize="13sp"
            android:fontFamily="@font/notosanskr"
            android:inputType="text"
            android:background="@color/inputColor"
            tools:ignore="RtlSymmetry"
            android:autofillHints="name" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="35dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:hint="@string/input_company"
            android:textColor="@color/inputText"
            android:textSize="13sp"
            android:fontFamily="@font/notosanskr"
            android:inputType="text"
            android:background="@color/inputColor"
            tools:ignore="RtlSymmetry"
            android:autofillHints="@null" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="55dp">
        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="5dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="35dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                android:hint="@string/input_depart"
                android:textColor="@color/inputText"
                android:textSize="13sp"
                android:fontFamily="@font/notosanskr"
                android:inputType="text"
                android:background="@color/inputColor"
                tools:ignore="RtlSymmetry"
                android:autofillHints="@null" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="25dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="35dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                android:hint="@string/input_rank"
                android:textColor="@color/inputText"
                android:textSize="13sp"
                android:fontFamily="@font/notosanskr"
                android:background="@color/inputColor"
                tools:ignore="RtlSymmetry"
                android:autofillHints="@null"
                android:inputType="text" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/hintText"
        android:layout_marginStart="40dp"
        android:textSize="12sp"
        android:text="테스트테스트"
        android:fontFamily="@font/notosanskr"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:layout_gravity="bottom">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            app:cardElevation="0dp"
            android:background="#000000"
            app:cardCornerRadius="35dp">
            <android.widget.Button
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:fontFamily="@font/notosanskrbold"
                android:background="@drawable/button"
                android:backgroundTint="@color/primary"
                android:stateListAnimator="@null" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>