<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.LoginActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="15dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="35dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:hint="@string/input_company_name"
            android:id="@+id/et_email"
            android:textColor="@color/inputText"
            android:fontFamily="@font/notosanskr"
            android:textSize="15sp"
            android:inputType="text"
            android:background="@color/inputColor"
            tools:ignore="RtlSymmetry" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="35dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:id="@+id/et_password"
            android:hint="코어 시간을 입력해 주세요"
            android:textColor="@color/inputText"
            android:textSize="15sp"
            android:fontFamily="@font/notosanskr"
            android:inputType="number"
            android:background="@color/inputColor"
            tools:ignore="RtlSymmetry" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosanskr"
            android:layout_marginStart="5dp"
            android:text="회사 근무 타입 선택"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/categoryLunch"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:fontFamily="@font/notosanskrbold"
                android:textSize="12sp"
                android:button="@null"
                android:background="@drawable/radio_button"
                android:text="시간 선택제"/>
            <RadioButton
                android:id="@+id/categoryCoffee"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:fontFamily="@font/notosanskrbold"
                android:textSize="12sp"
                android:button="@null"
                android:background="@drawable/radio_button"
                android:text="시차 출퇴근제"/>
            <RadioButton
                android:id="@+id/categoryTexi"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:fontFamily="@font/notosanskrbold"
                android:textSize="12sp"
                android:button="@null"
                android:background="@drawable/radio_button"
                android:text="탄력 근무제"/>

        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/hintText"
        android:layout_marginStart="40dp"
        android:textSize="12sp"
        android:id="@+id/tv_error"
        android:visibility="invisible"
        android:text="테스트테스트"
        android:fontFamily="@font/notosanskr"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:layout_gravity="bottom">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            app:cardElevation="0dp"
            android:background="#000000"
            app:cardCornerRadius="35dp">
            <android.widget.Button
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="@string/registerCompany"
                android:id="@+id/btn_login"
                android:textColor="@color/white"
                android:fontFamily="@font/notosanskrbold"
                android:background="@drawable/button"
                android:backgroundTint="@color/primary"
                android:stateListAnimator="@null" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>